gcc/testsuite/rust/rustc/ui/traits/trait-duplicate-methods.rs
trait Foo {
    fn orange(&self);
    fn orange(&self); // { dg-error ".E0428." "" { target *-*-* } }
}

fn main() {}

